--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
-    "xlsx": "^0.13.3"
+    "xlsx": "^0.13.3",
+    "xterm": "^3.14.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
